# EGRefine

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml  example_local_vllm.yaml  example_openai.yaml
docs/: architecture.md  benchmarks.md  quickstart.md  reproduction.md
docs/analyses/: cross_verifier_results.md
scripts/: __init__.py  compute_bootstrap_ci.py  run_ablation.py  run_bird_holdout.py  run_cross_model.py  run_eval.py  run_full.py  run_refine.py
scripts/analysis/: cross_verifier_aggregate.py  run_all_cells.py  touching_subset.py
scripts/desc_baseline/: analyze_4cell.py  generate_descriptions.py  probe_divergence.py  run_all_cells.sh  smoke_inject.py
src/egrefine/: __init__.py  cli.py  config.py  detail_logger.py  evaluate.py  experiment.py  pipeline.py
src/egrefine/baselines/: llm_cot.py  llm_direct.py  no_refinement.py
src/egrefine/data/: benchmark.py  db_connection.py  (+2 more)
tests/: test_beaver.py  test_bird_holdout_generator.py  test_c3.py  test_compute_bootstrap_ci.py  test_concurrency.py  test_detail_logger.py  test_dinsql.py  test_eval_db_setup.py  test_evaluator.py  test_evidence_pass_through.py  test_integration_two_stage.py  test_macsql.py  test_pk_fk_propagation.py  test_structural_exclusion.py  test_t0_config_and_clients.py  test_t10_pruner.py  test_t11_sampler.py  test_t12_prompts.py  test_t13_generator.py  test_t14_scorer.py  test_t16_conflict.py  test_t17_view_synthesis.py  test_t18_pipeline.py  test_t19_evaluate.py  test_t1_schema.py  test_t20_baselines.py  test_t21_experiment.py  test_t22_ablation.py  test_t23_cross_model.py  test_t2_benchmark.py  test_t3_query_index.py  test_t4_executor.py  test_t5_text2sql.py  test_t6_view_and_backmap.py  test_t8_embeddings.py  test_t9_signals.py  test_view_synthesis_v2.py
(+22 files in other folders)
